fondo header nav

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #ada9a9; /* Ajusta el color de fondo */
+    background-color: #ff8888; /* Ajusta el color de fondo */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega una sombra suave */
     padding: 12px;
     text-align: center;
